# timsort-cpp

./: CMakeLists.txt  README.md  bench.cpp  compiler.h  contiguous_iterator.h  install_manifest.txt  iter.h  memcpy_algos.h  test.cpp  timsort.h  timsort_stack_buffer.h  utils.h
benchmark-results/: .libc++_stable_sort_vs_timsort.txt.swp  README.md  boost_sort_feature_timsort_vs_timsort.txt  libc++_sort_vs_timsort.txt  libc++_stable_sort_vs_timsort.txt  libstdc++_sort_vs_timsort.txt  libstdc++_stable_sort_vs_timsort.txt
datasets/: .~lock.us_state_naics_detailedsizes_2015.txt#  read_data_sets.h
include/tim/: compiler.h  contiguous_iterator.h  iter.h  memcpy_algos.h  minrun.h  timsort.h  timsort_stack_buffer.h  undef_compiler.h  utils.h
src/: bench.cpp  test.cpp
